@@ -20,6 +20,7 @@
 	  <start_idx>1</start_idx>
 	  <end_idx>1</end_idx>
 	</choose_team>
+
 	<choose_team>
 	  <choose_team_sid>germany_dfb</choose_team_sid>
 	  <number_of_teams>1</number_of_teams>
